# fl-for-ai-health

./: .gitignore  FEDERATED_DEPLOYMENT.md  README.md  prepare_federated_data.sh  pyproject.toml  train.py
data/: brats.py  medmnits.py
fl_for_ai_health/: __init__.py
fl_for_ai_health/classification/: class_client.py  class_server.py  class_strategy.py  medmnist_task.py
fl_for_ai_health/segmentation/: brats_task.py  seg_client.py  seg_server.py  seg_strategy.py
models/resnet/: resnet18.py
models/tiny_segformer/: segformer_head.py  segmed.py
models/tiny_vit/: clip.py  remap_layer.py  tiny_vit.py
models/u_net/: u_net.py
utils/: distribute_brats.sh  distribute_medmnist.sh  losses.py  normalizer.py  split_brats.py  split_medmnist.py
